Text wrapping fix

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
             <p>
                 Start by installing the generator <strong>globally</strong> using <strong>npm</strong>:
-                <code>sudo npm install -g generator-kraken</code>
+                <br><code>sudo npm install -g generator-kraken</code>
             </p>
         </li>
         <li><h3>Create a project</h3>
@@ -317,16 +317,33 @@ Listening on 8000
         Let's start by looking at the base structure of the project you just created:
     </p>
     <h4>Structure of a kraken project</h4>
-                <pre class="prettyprint lang-html">
- /config            - Application and middleware configuration
- /controllers       - Controllers
- /lib               - Custom developer libraries and other code
- /locales           - Local-based content
- /models            - Models
- /public            - Web resources that are publicly available
- /public/templates  - Server and browser-side templates
- /tests             - Unit and functional test cases
- index.js           - Application entry point
+<pre class="prettyprint lang-html">
+/config
+Application and middleware configuration
+
+/controllers
+Routes and logic
+
+/lib
+Custom developer libraries and other code
+
+/locales
+Language specific content bundles
+
+/models
+Models
+
+/public
+Web resources that are publicly available
+
+/public/templates
+Server and browser-side templates
+
+/tests
+Unit and functional test cases
+
+index.js
+Application entry point
                 </pre>
 
     <p>
