--- a/index.html
+++ b/index.html
@@ -524,9 +524,14 @@ res.render(index,model);
     </p>
 
     <p>
-        <code>locales/<strong>US/en/</strong>index.properties</code> to hold <code>index.greeting=Hello
+        <code>locales/<strong>US/en/</strong>index.properties</code>
+        <br> to hold <br>
+        <code>index.greeting=Hello
+        <br>and<br>
         {name}!</code><br>
-        <code>locales/<strong>ES/es/</strong>index.properties</code> to hold <code>index.greeting=Hola {name}!</code>
+        <code>locales/<strong>ES/es/</strong>index.properties</code>
+        <br> to hold <br>
+        <code>index.greeting=Hola {name}!</code>
     </p>
 
     <p>
