Minor content tweak

--- a/index.html
+++ b/index.html
@@ -526,9 +526,10 @@ res.render(index,model);
     <p>
         <code>locales/<strong>US/en/</strong>index.properties</code>
         <br> to hold <br>
-        <code>index.greeting=Hello
+        <code>index.greeting=Hello{name}!</code>
+
         <br>and<br>
-        {name}!</code><br>
+
         <code>locales/<strong>ES/es/</strong>index.properties</code>
         <br> to hold <br>
         <code>index.greeting=Hola {name}!</code>
