Minor content tweak

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </a></li>
             <li><a href="#QuickStart">Get Started</a></li>
-            <li><a href="#">Documentation</a></li>
+            <li><a href="https://github.com/PayPal/kraken-js#kraken">Documentation</a></li>
             <li><a href="#">Examples</a></li>
             <li><a href="http://paypal.github.io" target="_blank"><img src="img/OSSLogo.png"
                                                                        alt="PayPal Open Source"></a></li>
@@ -145,12 +145,13 @@
 
                         <div class="info">
                             <h4>Generator</h4>
+
                             <p>
                                 A Yeoman generator for kraken projects
                             </p>
                         </div>
                     </li>
-                   <li class="enrouten" tabindex="9">
+                    <li class="enrouten" tabindex="9">
                         <a href="#">
                             <div class="hex2">
                                 <div>E</div>
@@ -558,6 +559,30 @@ res.render(index,model);
     <p>
         If you like this project, please follow it on GitHub!
     </p>
+</section>
+
+<section>
+    <h2>FAQ</h2>
+    <ul>
+        <li>
+            <h4>How can I contribute to this project?</h4>
+
+            <p>Bugs and new features should be submitted using <a href="https://github.com/PayPal/kraken-js/issues/new">Github
+                issues</a>. Please include with a detailed description and the expected behaviour. If you would like to
+                submit a change yourself do the following steps.</p>
+
+            <ol>
+                <li>Fork it.</li>
+                <li>Create a feature branch.</li>
+                <li>Commit a failing test.</li>
+                <li>Commit a fix that makes the test pass.</li>
+                <li>Open a <a href="https://github.com/PayPal/kraken-js/pulls">Pull Request.</a>
+                </li>
+            </ol>
+            <p>Please keep your branch up to date by rebasing upstream changes from master.</p>
+        </li>
+    </ul>
+
 </section>
 
 </div>
