Round 3 of feedback

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <ul>
 
                     <li class="generator" tabindex="4">
-                        <a href="#">
+                        <a target="_blank" href="http://github.com/paypal/generator-kraken">
                             <div class="hex2">
                                 <div>G</div>
                             </div>
@@ -151,8 +151,8 @@
                             </p>
                         </div>
                     </li>
-                    <li class="enrouten" tabindex="9">
-                        <a href="#">
+                    <li target="_blank" class="enrouten" tabindex="9">
+                        <a href="http://github.com/paypal/express-enrouten">
                             <div class="hex2">
                                 <div>E</div>
                             </div>
@@ -167,8 +167,8 @@
                         </div>
                     </li>
 
-                    <li class="webtools" tabindex="10">
-                        <a href="#">
+                    <li target="_blank" class="webtools" tabindex="10">
+                        <a href="http://github.com/paypal/kraken-devtools">
                             <div class="hex2">
                                 <div>D</div>
                             </div>
@@ -574,7 +574,7 @@ res.render(index,model);
             <ol>
                 <li>Fork it.</li>
                 <li>Create a feature branch.</li>
-                <li>Commit a failing test.</li>
+                <li>Commit a test that fails due to the bug.</li>
                 <li>Commit a fix that makes the test pass.</li>
                 <li>Open a <a href="https://github.com/PayPal/kraken-js/pulls">Pull Request.</a>
                 </li>
@@ -590,7 +590,7 @@ res.render(index,model);
 </div>
 <footer>
     <div class="wrapper">
-        Designed with ❤ and care by <a href="http://www.paypal.com" alt="PayPal">PayPal</a><br>
+        Designed with ❤ and care at <a href="http://www.paypal.com" alt="PayPal">PayPal</a><br>
         Code Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.html" alt="Apache License">Apache
         License v2.0</a>
         , documentation under <a href="http://creativecommons.org/licenses/by/3.0/legalcode"
