Round 3 of feedback

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <li><a href="#QuickStart">Get Started</a></li>
             <li><a href="https://github.com/PayPal/kraken-js#kraken">Documentation</a></li>
             <li><a href="#">Examples</a></li>
+            <li><a href="https://github.com/PayPal/kraken-js">GitHub</a></li>
             <li><a href="http://paypal.github.io" target="_blank"><img src="img/OSSLogo.png"
                                                                        alt="PayPal Open Source"></a></li>
         </ul>
@@ -275,8 +276,8 @@ $ yo kraken
 
 [?] Application name: HelloWorld
 [?] Description: A test kraken application
-[?] Author: YourName GoesHere
-    </pre>
+[?] Author: YourName GoesHere</pre>
+
 
             <p>
                 The generator will create a new directory for your application (Based on your answer to the first
@@ -296,8 +297,7 @@ $ npm start
 > helloworld@0.0.1 start ~/HelloWorld
 > node index.js
 
-Listening on 8000
-        </pre>
+Listening on 8000</pre>
             <p>
                 Your kraken application will start up on port 8000. You can visit it at
                 <a target="_blank" href="http://localhost:8000">http://localhost:8000</a>.
@@ -344,8 +344,7 @@ Server and browser-side templates
 Unit and functional test cases
 
 index.js
-Application entry point
-                </pre>
+Application entry point </pre>
 
     <p>
         Let's say you want to create a simple application. As your application
@@ -490,7 +489,7 @@ module.exports = function (server) {
         If we wanted to greet our customers, a basic template would be:
     </p>
     <pre class="prettyprint lang-html">
-   &lt;h1&gt;Hello {name}!&lt;/h1&gt;    </pre>
+   &lt;h1&gt;Hello {name}!&lt;/h1&gt;</pre>
 
 </section>
 <section>
@@ -506,8 +505,7 @@ module.exports = function (server) {
 var customerLocality = "es_ES";
 res.locals.locality = customerLocality;
 var model = {name: 'Antonio Banderas'};
-res.render(index,model);
-    </pre>
+res.render(index,model);</pre>
     <p>
         We would also change our template as follows, using a <code>@pre content</code> tag:
     </p>
@@ -546,12 +544,6 @@ res.render(index,model);
 </section>
 <section>
     <h2>Documentation</h2>
-
-    <p>
-        As you can see, kraken has been built with ease-of-use in mind. It will keep your application well organized
-        from the get-go, and it will do so transparently, without getting in your way.
-    </p>
-
     <p>
         To view the full documentation please visit <a href="http://github.com/paypal/kraken-js">kraken</a> on GitHub
     </p>
@@ -592,8 +584,7 @@ res.render(index,model);
     <div class="wrapper">
         Designed with ❤ and care at <a href="http://www.paypal.com" alt="PayPal">PayPal</a><br>
         Code Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.html" alt="Apache License">Apache
-        License v2.0</a>
-        , documentation under <a href="http://creativecommons.org/licenses/by/3.0/legalcode"
+        License v2.0</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/legalcode"
                                  alt="Cretive Commons License">CC BY 3.0</a>
     </div>
 </footer>
