Round 3 of feedback

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <div id="Intro">
             <div id="MainLogo" class="mainLogo"></div>
             <div id="IntroText">
+
                 <img src="img/TextLogo@High.png" alt="KrakenJS" height="65">
 
                 <h1>
@@ -71,7 +72,7 @@
                     Get Started
                 </a>
                 <a title="Build Status" href="https://travis-ci.org/paypal/kraken-js"><img
-                        src="https://travis-ci.org/paypal/kraken-js.png"></a>
+                        src="https://travis-ci.org/paypal/kraken-js.png" alt="Build Status"></a>
 
 
             </div>
